[gd_scene load_steps=6 format=3 uid="uid://c3dkf300mcyuj"]

[ext_resource type="Script" uid="uid://dwsaehb7ew26r" path="res://scripts/fast_menu_script.gd" id="1_csqqr"]
[ext_resource type="Texture2D" uid="uid://tuojukyv3utk" path="res://assets/menu_fone.png" id="1_e3owc"]
[ext_resource type="Texture2D" uid="uid://be21lcylbqjxk" path="res://assets/start_screne/btn_start.png" id="2_csqqr"]
[ext_resource type="Texture2D" uid="uid://cenefsn2jxiev" path="res://assets/start_screne/btn_settings.png" id="3_m66h0"]
[ext_resource type="Texture2D" uid="uid://dbkneuu15hy3w" path="res://assets/start_screne/btn_exit.png" id="4_bpv2r"]

[node name="FastMenu" type="Node2D"]
script = ExtResource("1_csqqr")

[node name="fone" type="TextureRect" parent="."]
offset_left = 263.0
offset_top = 60.0
offset_right = 891.0
offset_bottom = 580.0
texture = ExtResource("1_e3owc")

[node name="Label" type="Label" parent="fone"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 100.0
offset_right = 50.0
offset_bottom = 125.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.023529412, 0.8784314, 0.9372549, 1)
theme_override_font_sizes/font_size = 25
text = "Меню"

[node name="TextureButtonContinue" type="TextureButton" parent="fone"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -155.0
offset_top = -355.0
offset_right = 156.0
offset_bottom = -282.0
grow_horizontal = 2
grow_vertical = 0
tooltip_text = "Нажмите, чтобы попасть в лобби"
texture_normal = ExtResource("2_csqqr")

[node name="Label" type="Label" parent="fone/TextureButtonContinue"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -8.0
offset_right = 80.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.33551347, 0.92174673, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Продолжить"

[node name="TextureButtonSettings" type="TextureButton" parent="fone"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -155.0
offset_top = -257.0
offset_right = 156.0
offset_bottom = -184.0
grow_horizontal = 2
grow_vertical = 0
tooltip_text = "Нажмите, чтобы попасть в лобби"
texture_normal = ExtResource("3_m66h0")

[node name="Label" type="Label" parent="fone/TextureButtonSettings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -8.0
offset_right = 80.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.023529412, 0.8784314, 0.9372549, 1)

[node name="TextureButtonQuitGame" type="TextureButton" parent="fone"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -155.0
offset_top = -160.0
offset_right = 156.0
offset_bottom = -87.0
grow_horizontal = 2
grow_vertical = 0
tooltip_text = "Нажмите, чтобы попасть в лобби"
texture_normal = ExtResource("4_bpv2r")

[node name="Label" type="Label" parent="fone/TextureButtonQuitGame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -8.0
offset_right = 80.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.023529412, 0.8784314, 0.9372549, 1)

[connection signal="pressed" from="fone/TextureButtonContinue" to="." method="press_continue_button"]
[connection signal="pressed" from="fone/TextureButtonSettings" to="." method="press_settings_button"]
[connection signal="pressed" from="fone/TextureButtonQuitGame" to="." method="press_quit_game_button"]
